...
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/password"
            android:typeface="sans"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:typeface="sans"
            android:background="@drawable/shape_rectangle_green"
            android:textColor="#FFFFFF"
...
